<resources>
    <string name="title_activity_full_image">FullImageActivity</string>
    <string name="app_name">GalleryG2</string>
    <string name="test_image_content_desc">Test image</string>
    <string name="item_pictures">Pictures</string>
    <string name="item_folders">Folders</string>
    <string name="item_trash">Trash</string>
    <string name="item_settings">Settings</string>
    <string name="create_new_album">CREATE NEW ALBUM</string>
    <string name="name">Name:</string>
    <string name="new_album">New album</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="my_albums">My Albums</string>
    <string name="media_types_and_utilities">Media Types and Utilities</string>
    <string name="my_folders">My Folders</string>
    <string name="select_all">Select All</string>
    <string name="sort">Sort</string>
    <string name="sort_name_az">Name (A-Z)</string>
    <string name="sort_name_za">Name (Z-A)</string>
    <string name="sort_date_new">Date (newest)</string>
    <string name="sort_date_old">Date (oldest)</string>
    <string name="sort_size_small">Size (smallest)</string>
    <string name="sort_size_large">Size (largest)</string>
    <string name="open_camera">Open Camera</string>
    <string name="empty">Empty</string>
    <string name="import_album">Import Album</string>
    <string name="delete">Delete</string>
    <string name="import_to_existing_new_album">Import To Existing/New Album</string>
    <string name="importImages">Import</string>
    <string name="option">Import to:</string>
    <string name="existing_albums">Albums:</string>
    <string name="done">DONE</string>
    <string name="slideshow">Slideshow</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
</resources>