<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/clear_choose"
        android:title=""
        android:icon="@drawable/ic_clear"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_images"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/importAlbums"
        android:title="@string/import_album"
        android:icon="@drawable/ic_album"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_share"
        android:title=""
        android:icon="@drawable/ic_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_chang_view"
        android:title=""
        android:icon="@drawable/ic_grid_4"
        app:showAsAction="always" />

    <item
        android:id="@+id/select_all"
        android:title="@string/select_all" />

    <item
        android:id="@+id/menu_camera"
        android:title="Open Camera" />

</menu>